feat: improve customer management api
